--- a/app-helm/templates/mysql-configmap.yaml
+++ b/app-helm/templates/mysql-configmap.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mysql-data
+  labels:
+    app: callmysql
 data:
   employees.sql: |
     USE demo;
