--- a/app-helm/templates/mysql-service.yaml
+++ b/app-helm/templates/mysql-service.yaml
@@ -2,11 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql-service
+  labels:
+    app: callmysql
 spec:
   selector:
     {{- include "mysql.Labels" . | nindent 4 }}
-  ports:
-    - name: mysql
-      protocol: TCP
-      port: 3306
-      targetPort: 3306
+  # ports:
+  #   - name: mysql
+  #     protocol: TCP
+  #     port: 3306
+  #     targetPort: 3306
+  clusterIP: None   # headless service
